# ocaml-libsndfile

./: README.txt  Todo.txt  dune-project  sndfile.opam
src/: META  dune  sndfile.ml  sndfile.mli  sndfile_stub.c  sndfile_stub.h
src/config/: discover.ml
src/test/: t_sndfile.ml
