opam-version: "2.0"
maintainer: "Philippe Strauss <philippe@strauss-engineering.ch>"
authors: [ "Erik de Castro Lopo <erikd@mega-nerd.com>" ]
license: ""
homepage: "https://github.com//ocaml-libsndfile/"
dev-repo: "git://github.com//ocaml-libsndfile.git"
bug-reports: "https://github.com//ocaml-libsndfile/issues"
doc: "https://"
build: [
  [
      "dune" "build" "-p" name "-j" jobs
      "@doc" {with-doc}
  ]
]
depends: [
  "ocaml"
  "dune" {>= "2.0.0"}
  "dune-configurator"
  "odoc" {with-doc}
]
depexts: [
  ["libplplot-dev" "libshp-dev"] {os-family = "debian"}
  ["plplot"] {os = "macos" & os-distribution = "homebrew"}
  ["plpot"] {os-family = "arch"}
  ["plplot-devel"] {os-family = "rhel"}
  ["plplot-devel"] {os-family = "fedora"}
  ["plplot-devel"] {os-family = "suse"}
  ["plplot-devel" "epel-release"] {os-distribution = "centos"}
  ["plplot"] {os-distribution = "nixos"}
]
synopsis: "Bindings for the libsndfile soundfile manipulation library"
description: "Libsndfile is a soundfile reading/writing/manipulation library written in C"
